kubernetes/apps/observability/grafana/instance/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  annotations:
    gatus.home-operations.com/endpoint: |-
      name: "Grafana"
      group: Internal
      ui:
        hide-url: true
        hide-hostname: true
spec:
  hostnames:
    - "grafana.${PRIMARY_SECRET_DOMAIN}"
  parentRefs:
    - name: internal-gateway
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: grafana-service
          port: 3000
